# sting

./: README.md  environment.yml  mkdocs.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
sting/: __init__.py  classifier.py
test/: test_data.py
test/example_data/: example.data  example.names
